--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <video autoplay muted loop id="myVideo">
-            <source src="/video/demonslayer.mp4" type="video/mp4">
+            <source src="video/demonslayer.mp4" type="video/mp4">
         </video>
         <nav>
             <ul id="flex-container">
